clusters/beryjuio-home/gitlab/gitlab-ingress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: gitlab
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: beryjuio-gitlab
      hosts:
        - gitlab.${CLUSTER_NAME}.k8s.beryju.io
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - gitlab.${CLUSTER_NAME}.k8s.beryju.io
      tls:
        httpsRedirect: true
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: beryju-io-dr-gitlab
  namespace: istio-system
spec:
  host: gitlab.gitlab.svc.cluster.local
  trafficPolicy:
    portLevelSettings:
      - port:
          number: 443
        tls:
          mode: SIMPLE
          insecureSkipVerify: true
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: beryju-io-vs-gitlab
  namespace: istio-system
spec:
  gateways:
    - gitlab
  hosts:
    - gitlab.${CLUSTER_NAME}.k8s.beryju.io
  http:
    - route:
        - destination:
            host: gitlab.gitlab.svc.cluster.local
            port:
              number: 80
          weight: 100
